@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1200</version>
+  <version>1201</version>
   <dependencies>
       <dependency>profile-izug.basetheme:default</dependency>
   </dependencies>
