@@ -22,5 +22,24 @@
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
 
+    <!-- 1200 -> 1201 -->
+    <genericsetup:upgradeStep
+        title="ftw.contentmenu upgrade: reorder menu viewlets"
+        description=""
+        source="1200"
+        destination="1201"
+        handler="izug.basetheme.upgrades.izug4.to1201.ReorderViewlets"
+        profile="izug.basetheme:izug4"
+        />
+
+    <genericsetup:registerProfile
+        name="1201"
+        title="izug.basetheme.izug4: upgrade profile 1201"
+        description=""
+        directory="profiles/1201"
+        for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
 
 </configure>
